objects/LAT_MX_PMN_PromissoryNote__c.object
<CustomObject>
    <fields>
        <fullName>LAT_MX_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_MX_ApprovalDate__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_City__c</fullName>
        <formula>LAT_MX_Executor__r.LAT_MX_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Consignature1__c</fullName>
        <label>Consignature 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Consignature2__c</fullName>
        <label>Consignature 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_County__c</fullName>
        <formula>LAT_MX_Executor__r.LAT_MX_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Executor__c</fullName>
        <label>Executor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>MX Off-Trade</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promissory Notes</relationshipLabel>
        <relationshipName>Promissory_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_MX_LegalProcessApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Process Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promissory_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_MX_LegalRepresentative__c</fullName>
        <label>Legal Representative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Neighbourhood__c</fullName>
        <formula>LAT_MX_Executor__r.LAT_MX_Neighbourhood__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neighbourhood</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_PostalCode__c</fullName>
        <formula>LAT_MX_Executor__r.LAT_MX_PostalCode__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_RFC__c</fullName>
        <formula>LAT_MX_Executor__r.CNPJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_State__c</fullName>
        <formula>LAT_MX_Executor__r.LAT_MX_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_MX_Street__c</fullName>
        <formula>LAT_MX_Executor__r.AddressLine1_AR__c + &quot; &quot; +  LAT_MX_Executor__r.Revenue_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <label>Promissory Note</label>
    <nameField>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promissory Notes</pluralLabel>
    <recordTypes>
        <fullName>LAT_MX_PMN_Standard</fullName>
        <active>true</active>
        <description>Record Type standard for Mexico</description>
        <label>MX Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>